[gd_scene load_steps=9 format=3 uid="uid://dntuqbn8l0r61"]

[ext_resource type="Script" uid="uid://cv36m2bgli07x" path="res://bullets/aimed_bullet.gd" id="1_nacei"]
[ext_resource type="Texture2D" uid="uid://bweg3w60dlxti" path="res://bullets/bullet.png" id="2_ybpj4"]
[ext_resource type="Material" uid="uid://shc44r0efrv4" path="res://shared/materials/bullet_smoke.tres" id="4_2eqlt"]
[ext_resource type="PackedScene" uid="uid://cpkxmkaq2v6yg" path="res://shared/smoke.tscn" id="4_ybpj4"]
[ext_resource type="AudioStream" uid="uid://ckrufwnop0w71" path="res://external_assets/dklon/boom1.wav" id="5_ybpj4"]
[ext_resource type="PackedScene" uid="uid://xfkwh310tgd2" path="res://shared/hit_explosions.tscn" id="5_yqjab"]
[ext_resource type="Material" uid="uid://cxmddp7425602" path="res://shared/materials/bullet_explosions.tres" id="6_fh1rw"]

[sub_resource type="CircleShape2D" id="CircleShape2D_sjpon"]
radius = 7.28011

[node name="AimedBullet" type="Area2D"]
collision_layer = 8
script = ExtResource("1_nacei")
damage = 15.0
speed = 300.0
color = Color(1, 0.478431, 0.243137, 1)

[node name="Sprite2D" type="Sprite2D" parent="."]
unique_name_in_owner = true
texture = ExtResource("2_ybpj4")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
unique_name_in_owner = true
shape = SubResource("CircleShape2D_sjpon")

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]

[node name="Smoke" parent="." instance=ExtResource("4_ybpj4")]
unique_name_in_owner = true
process_material = ExtResource("4_2eqlt")

[node name="Explosions" parent="." instance=ExtResource("5_yqjab")]
unique_name_in_owner = true
process_material = ExtResource("6_fh1rw")

[node name="BulletSound" type="AudioStreamPlayer" parent="."]
unique_name_in_owner = true
stream = ExtResource("5_ybpj4")
volume_db = 5.0

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="screen_exited" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_exited"]
